CRM - 調整合約內容

--- a/CRM/master-contract_print.html
+++ b/CRM/master-contract_print.html
@@ -32,7 +32,7 @@
     <!-- 合約編號 fixed 右上角 -->
     <div style="text-align: right; position: absolute; right: 0px; top: -9mm;">
       <font style="font-size:12px; color: #888; display: block; font-weight: normal; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
-        No.-11100000223134
+        No.11100000223134
       </font>
     </div>
     <!-- 合約書 - 標題 -->
@@ -453,10 +453,10 @@
         </font>
         <div style="padding: 100px 0 240px 0;">
           <font
-            style="font-size:12px; line-height: 1.5; color: #333; display: block; font-weight: normal; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
-            約經依雙方合法授權之代表人簽署如下：<br>
+            style="font-size:12px; line-height: 1.5; color: #333; display: block; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
+            <span style="font-weight: bold;">約經依雙方合法授權之代表人簽署如下：</span><br>
             <br>
-            甲　　方： ----- 這邊高度的位置可調 但不知道要留多少範圍<br>
+            甲　　方：這邊高度的位置可調 但不知道要留多少範圍<br>
             負 責 人 ：<br>
             地　　址：<br>
             統　　編：<br>
@@ -466,7 +466,7 @@
         </div>
         <div style="padding: 0px 0 240px 0;">
           <font
-            style="font-size:12px; line-height: 1.5; color: #333; display: block; font-weight: normal; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
+            style="font-size:12px; line-height: 1.5; color: #333; display: block; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
             乙　　方：威旭數據科技股份有限公司<br>
             負 責 人 ：張希寧<br>
             地　　址：104 台北市中山區南京東路三段 63 號 8 樓<br>
@@ -476,18 +476,15 @@
           </font>
         </div>
         <font
-          style="font-size:12px; color: #333; display: block; text-align: right; font-weight: normal; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
-          簽約日期：中華民國 ______ 年 ______ 月 ______ 日
+          style="font-size:12px; color: #333; display: block; text-align: right; font-weight: normal; font-family: Helvetica, '微軟正黑體',arial,sans-serif; position: absolute; right: 6mm;
+              bottom: 0mm;">
+          簽約日期：中華民國 ________ 年 ________ 月 ________ 日
         </font>
         <font style="font-size:11px; color: #c4c4c4; display: block; font-weight: normal; font-family: Helvetica, '微軟正黑體',arial,sans-serif; position: absolute; left: 0;
               bottom: -10mm;">
           Weblisher Data Tech Co., Ltd – Ver.230407
         </font>
       </div>
-      <font style="font-size:11px; color: #c4c4c4; display: block; font-weight: normal; font-family: Helvetica, '微軟正黑體',arial,sans-serif; position: absolute; left: 0;
-                bottom: -10mm;">
-        Weblisher Data Tech Co., Ltd – Ver.230407
-      </font>
   </div>  
   </section>
 
