--- a/CRM/project-contract_print.html
+++ b/CRM/project-contract_print.html
@@ -72,7 +72,7 @@
           style="font-size:12px;list-style-type: decimal; margin:5px 0 10px 0; padding-inline-start: 40px; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
           <li>
             <font style="font-size:12px; line-height: 1.5; text-align: justify; color: #333; display: block; font-weight: normal; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
-              乙方依照雙方合意之目標專案內容，擬定「專案訂購單」，包含專案執行目標、執行走期、操作媒體、專案金額配置、付款方式等所有相關內容，甲方應於 7個工作日內確認用印回傳予乙方。
+              乙方依照雙方合意之目標專案內容，擬定「專案訂購單」，包含專案執行目標、執行走期、操作媒體、專案金額配置、付款方式等所有相關內容，甲方應於 7 個工作日內確認用印回傳予乙方。
             </font>
           </li>
           <li>
@@ -132,7 +132,7 @@
               執行門檻：<br>
               <ul style="list-style-type: lower-alpha; margin: 0; padding-inline-start: 20px; font-size:12px; line-height: 1.5; color: #333;font-weight: normal; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
                 <li style="padding-left: 10px;">
-                  須支付福袋金額至少 66,000元（未稅）不退款，其中 36,000 元（未稅）將認列為乙方之給力蘿蔔押金。
+                  須支付福袋金額至少 66,000 元（未稅）不退款，其中 36,000 元（未稅）將認列為乙方之給力蘿蔔押金。
                 </li>
                 <li style="padding-left: 10px;">
                   於福袋規定時間內廣告上線。
@@ -598,9 +598,9 @@
         <div style="padding: 100px 0 240px 0;">
           <font
             style="font-size:12px; line-height: 1.5; color: #333; display: block; font-weight: normal; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
-            約經依雙方合法授權之代表人簽署如下：<br>
+            <span style="font-weight: bold;">約經依雙方合法授權之代表人簽署如下：</span><br>
             <br>
-            甲　　方： ----- 這邊高度的位置可調 但不知道要留多少範圍<br>
+            甲　　方： 這邊高度的位置可調 但不知道要留多少範圍<br>
             負 責 人 ： 因為上方的"條款高度"無法控制<br>
             地　　址：<br>
             統　　編：<br>
@@ -619,11 +619,10 @@
             用　　印：<br>
           </font>
         </div>
-        <font
-          style="font-size:12px; color: #333; display: block; text-align: right; font-weight: normal; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
-          簽約日期：中華民國 ______ 年 ______ 月 ______ 日
+        <font style="font-size:12px; color: #333; display: block; text-align: right; font-weight: normal; font-family: Helvetica, '微軟正黑體',arial,sans-serif; position: absolute; right: 6mm;
+                      bottom: 0mm;">
+          簽約日期：中華民國 ________ 年 ________ 月 ________ 日
         </font>
-        
         <font style="font-size:11px; color: #c4c4c4; display: block; font-weight: normal; font-family: Helvetica, '微軟正黑體',arial,sans-serif; position: absolute; left: 0;
                                   bottom: -10mm;">
           Weblisher Data Tech Co., Ltd – Ver.230407
