--- a/CRM/project-order-contract_print.html
+++ b/CRM/project-order-contract_print.html
@@ -28,11 +28,10 @@
         <img src="images/svg/logo.svg" width="100%" style="display: inline-block; opacity: .5;">
       </div>
       <!-- 合約編號 fixed 右上角 -->
-      <div style="text-align: right; position: absolute; right: 0px; top: -10mm;">
+      <div style="text-align: right; position: absolute; right: 0px; top: -9mm;">
         <font
           style="font-size:12px; color: #888; display: block; font-weight: normal; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
-          專案訂購單 No.11100000223134<br>
-          中華民國 XXX 年 XX 月 XX 日
+          No.11100000223134
         </font>
       </div>
       <!-- 合約書 - 標題 -->
@@ -45,7 +44,7 @@
         </div>
       </div>
       <div style="padding:10px 0;">
-        <table width="100%" border="0" cellspacing="0" cellpadding="0" style="margin: 0 auto 12px auto;">
+        <table width="100%" border="0" cellspacing="0" cellpadding="0" style="margin:15px auto;">
           <tr>
             <td width="50%">
               <font
@@ -70,11 +69,11 @@
               </font>
               <font
                 style="font-size:12px; line-height: 1.5; color: #333; display: block;  font-weight: normal; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
-                地址：台北市104中山區南京東路三段63號8樓<br>
+                地址：104 台北市中山區南京東路三段 63 號 8 樓<br>
                 公司電話：(02)2502-1980<br>
                 統一編號：90656422<br>
                 聯絡人：XXX<br>
-                聯絡人電話：(02)1111-1111<br>
+                聯絡人電話：(02)1111-1111#108<br>
                 聯絡 Email：XXXXX@XXX.com.tw
               </font>
             </td>
@@ -140,7 +139,7 @@
               <th width="" align="left" style="padding:3px; border-bottom: 1px solid #dbdbdb;">
                 <font
                   style="font-size:12px; color: #555; display: block; font-weight: bold; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
-                  內容說明<span style="font-size: 11px; color: #888; font-weight: initial;">（字數限制XX字）</span>
+                  內容說明
                 </font>
               </th>
               <th width="15%" align="right" style="padding:5px; border-bottom: 1px solid #dbdbdb;">
@@ -464,7 +463,7 @@
               <td style="padding:5px;">
                 <font
                   style="font-size:12px; color: #333; display: block; font-weight: normal; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
-                  質感影片15~60秒
+                  質感影片 15~60 秒
                 </font>
               </td>
               <td width="15%" align="right" style="padding:5px;">
@@ -578,7 +577,7 @@
               <td style="padding:5px;">
                 <font
                   style="font-size:12px; color: #333; display: block; font-weight: normal; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
-                  廣告靜態素材製作(1款2式)x 4組
+                  廣告靜態素材製作（1款2式）x 4組
                 </font>
               </td>
               <td align="right" style="padding:5px;">
@@ -692,7 +691,7 @@
               <td style="padding:5px;">
                 <font
                   style="font-size:12px; color: #333; display: block; font-weight: normal; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
-                  快廣告剪輯15秒-0301說明會(特贈)
+                  快廣告剪輯15秒-0301說明會（特贈）
                 </font>
               </td>
               <td align="right" style="padding:5px;">
@@ -791,7 +790,7 @@
                     <td style="padding:3px;">
                       <font
                         style="font-size:12px; color: #333; display: block; font-weight: normal; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
-                        Google 20%;Facebook 20%;Yahoo優惠減免
+                        Google 20%；Facebook 20%；Yahoo 優惠減免
                       </font>
                     </td>
                     <td align="right" style="padding:3px 0;">
@@ -847,7 +846,7 @@
             <tr>
               <td style="padding:3px 10px; border-top:1px solid #dbdbdb;">
                 <font
-                  style="font-size:14px; color: #333; font-style:italic; display: block; font-weight: bold; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
+                  style="font-size:13px; color: #333; font-style:italic; display: block; font-weight: bold; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
                   專案總金額
                 </font>
               </td>
@@ -855,7 +854,7 @@
               </td>
               <td align="right" style="padding:3px 10px; border-top:1px solid #dbdbdb;">
                 <font
-                  style="font-size:15px; color: #333;font-style:italic; font-weight: bold; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
+                  style="font-size:14px; color: #333;font-style:italic; font-weight: bold; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
                   5,453,700
                 </font>
               </td>
@@ -878,11 +877,10 @@
           <img src="images/svg/logo.svg" width="100%" style="display: inline-block; opacity: .5;">
         </div>
         <!-- 合約編號 fixed 右上角 -->
-        <div style="text-align: right; position: absolute; right: 0px; top: -10mm;">
+        <div style="text-align: right; position: absolute; right: 0px; top: -9mm;">
           <font
             style="font-size:12px; color: #888; display: block; font-weight: normal; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
-            專案訂購單 No.11100000223134<br>
-            中華民國 XXX 年 XX 月 XX 日
+            No.11100000223134
           </font>
         </div>
 
@@ -897,7 +895,7 @@
               <li>
                 <font
                   style="font-size:12px; line-height: 1.5; color: #333; display: block; font-weight: normal; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
-                  電子發票形式：開立三聯式電子發票；發票收件 Email：________________________________________________
+                  電子發票形式：開立三聯式電子發票；發票收件 Email：xxxxxxxxxxxx@xxxxxx.com.tw
                 </font>
               <li>
                 <font
@@ -931,6 +929,8 @@
                 <ul
                   style="list-style-type: disc; font-size:12px; line-height: 1.5; min-height: 130px; margin: 5px 0 10px 0; padding-inline-start: 20px; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
                   <li>
+                    最多七行的狀況下，一行最多 50 字（中、英文、數字），最多七行的狀況下，一行最多 50 字（中、英文、數字）
+                  </li><!-- <li>
                     XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
                   </li>
                   <li>
@@ -947,10 +947,8 @@
                   </li>
                   <li>
                     XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
-                  </li>
-                  <li>
-                    最多七行，一行最多 50 字（中、英文、數字），最多七行，一行最多 50 字（中、英文、數字），最多七行，一行
-                  </li>
+                  </li> -->
+                  
                 </ul>
             </ul>
     
@@ -966,7 +964,7 @@
                   媒體數位廣告服務項目為競價模式，可能會依循競價環境變化而有所提升或降低。
                 </font>
               </li>
-              <li>
+              <!-- <li>
                 <font
                   style="font-size:12px; line-height: 1.5; color: #333; display: block;  font-weight: normal; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
                   XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
@@ -1001,16 +999,16 @@
                   style="font-size:12px; line-height: 1.5; color: #333; display: block;  font-weight: normal; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
                   XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
                 </font>
-              </li>
+              </li> -->
             </ul>
           </div>
         </div>
-        <div style=" position: absolute; left: 0; bottom: 10mm;">
+        <div style=" position: absolute; left: 0; bottom: 6mm;">
           <font
             style="font-size:12px; line-height: 1.5; color: #333; font-weight: normal; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
             *雙方皆已確認依照此媒體廣告委刊內容執行，且同意所有執行責任及義務應以業務合作合約書之約定為準後給予簽章/用印。</font>
           <table width="100%" border="0" cellspacing="0" cellpadding="0"
-            style="border: 1px solid #dbdbdb; width: 100%; margin:10px auto 0 auto;">
+            style="border: 1px solid #dbdbdb; width: 100%; margin:10px auto;">
             <tr>
               <td
                 style="min-height: 160px; vertical-align: top; display: grid; padding:3px 10px;border-right: 1px solid #dbdbdb; border-bottom:1px dashed  #dbdbdb">
@@ -1035,6 +1033,10 @@
             </tr>
           </table>
         </div>
+        <font style="font-size:12px; color: #333; display: block; text-align: right; font-weight: normal; font-family: Helvetica, '微軟正黑體',arial,sans-serif; position: absolute; right: 6mm;
+                        bottom: 0mm;">
+            簽約日期：中華民國 ________ 年 ________ 月 ________ 日
+          </font>
         <font
           style="font-size:11px; color: #c4c4c4; display: block; font-weight: normal; font-family: Helvetica, '微軟正黑體',arial,sans-serif; position: absolute; left: 0; bottom: -10mm;">
           Weblisher Data Tech Co., Ltd – Ver.230407
