WiFiOTG - 新增租借紀錄頁、登入小調整
1. 新增租借紀錄頁
2. header 登入的地方小調整
3. 新增訂購資訊的簡訊驗證按鈕

--- a/iiot/WiFiOTG/done.html
+++ b/iiot/WiFiOTG/done.html
@@ -13,27 +13,47 @@
 	</head>
 	<body>
 		<header class="header_wrap">
-			<section class="cont_middle clearfix">
+			<!-- 帳號登入 + logged_in -->
+			<section class="cont_middle logged_in clearfix">
 				<a class="header_logo" href="index.html">WiFiOTG</a>
-				<a class="cont_user" href="#">
+				<nav class="menu">
+					<ul>
+						<li>
+							<p><a href="index.html">首頁</a></p>
+						</li>
+						<li>
+							<p><a href="location.html">取還點查詢</a></p>
+						</li>
+						<li>
+							<p><a href="teaching.html">使用說明</a></p>
+						</li>
+						<li>
+							<p><a href="qa.html">常見問題</a></p>
+						</li>
+						<li>
+							<p><a href="history.html">租借紀錄查詢</a></p>
+						</li>
+					</ul>
+				</nav>
+				<div class="cont_user">
 					<div class="profile">
 						<div class="photo"
 							style="background-image:url(https://lh3.googleusercontent.com/ogw/AGvuzYb52a2kJ6PRLTAuYe3-t0Hg2Dq7pfqEQ6iZ2oBu=s32-c-mo);">
 						</div>
-						<p>CHANG</p>
+						<p>wendyshiue00123（<a href="index.html">登出</a>）</p>
 					</div>
-				</a>
+				</div>
 			</section>
 		</header>
 		<main class="main_wrap">
 			<section class="shopping_contents">
 				<form class="fillinBox">
 					<h3 class="top_title">預訂成功</h3>
-					<div class="order-done">
+					<div class="order_done">
 						<div class="other_item clearfix">
-							<div class="pro-text">
+							<div class="pro_text">
 								<p class="pro">取機序號</p>
-								<p class="order-nb">DD_EQEWR5sWW20a</p>
+								<p class="order_nb">DD_EQEWR5sWW20a</p>
 							</div>
 							<p class="btn_default"><a href="#">取機教學</a></p>
 						</div>
