--- a/iiot/WiFiOTG/index.html
+++ b/iiot/WiFiOTG/index.html
@@ -32,7 +32,7 @@
 							<p><a href="qa.html">常見問題</a></p>
 						</li>
 						<li>
-							<p class="btn_yello"><a href="order.html">租借紀錄查詢</a></p>
+							<p class="btn_yello"><a href="history.html">租借紀錄查詢</a></p>
 						</li>
 					</ul>
 				</nav>
@@ -110,7 +110,7 @@
 								<p><a class="bg_c_05" href="#">日本</a></p>
 							</li>
 						</ul>
-						<a href="country.html">
+						<a href="plan.html">
 							<div class="cou_info">
 								<div class="bk">
 									<p class="title">亞洲</p>
@@ -120,7 +120,7 @@
 						</a>
 					</li>
 					<li>
-						<a href="country.html">
+						<a href="plan.html">
 							<div class="cou_info">
 								<div class="bk">
 									<p class="title">越南</p>
@@ -130,7 +130,7 @@
 						</a>
 					</li>
 					<li>
-						<a href="country.html">
+						<a href="plan.html">
 							<div class="cou_info">
 								<div class="bk">
 									<p class="title">美國</p>
@@ -140,7 +140,7 @@
 						</a>
 					</li>
 					<li>
-						<a href="country.html">
+						<a href="plan.html">
 							<div class="cou_info">
 								<div class="bk">
 									<p class="title">非洲</p>
