--- a/iiot/WiFiOTG/login.html
+++ b/iiot/WiFiOTG/login.html
@@ -17,8 +17,8 @@
 			<div class="login_type_box">
 				<p class="text">會員快速登入</p>
 				<ul>
-					<li class="apple"><a href="#">Apple</a></li>
-					<li class="google"><a href="#">Google</a></li>
+					<li class="apple"><a href="order.html">Apple</a></li>
+					<li class="google"><a href="order.html">Google</a></li>
 				</ul>
 			</div>
 		</section>
@@ -41,7 +41,7 @@
 							<p><a href="qa.html">常見問題</a></p>
 						</li>
 						<li>
-							<p class="btn_yello"><a href="order.html">租借紀錄查詢</a></p>
+							<p class="btn_yello"><a href="history.html">租借紀錄查詢</a></p>
 						</li>
 					</ul>
 				</nav>
