--- a/iiot/WiFiOTG/plan.html
+++ b/iiot/WiFiOTG/plan.html
@@ -30,7 +30,7 @@
 							<p><a href="qa.html">常見問題</a></p>
 						</li>
 						<li>
-							<p class="btn_yello"><a href="order.html">租借紀錄查詢</a></p>
+							<p class="btn_yello"><a href="history.html">租借紀錄查詢</a></p>
 						</li>
 					</ul>
 				</nav>
@@ -92,7 +92,7 @@
 								快來體驗</p>
 					   		</div>
 				   			<p class="plan_order">
-				   				<a href="order.html">開始預訂</a>
+				   				<a href="login.html">開始預訂</a>
 					   		</p>
 					   	</div>
 			   		</li>
@@ -111,7 +111,7 @@
 								95折回饋好朋友</p>
 					   		</div>
 				   			<p class="plan_order">
-				   				<a href="order.html">開始預訂</a>
+				   				<a href="login.html">開始預訂</a>
 					   		</p>
 					   	</div>
 			   		</li>
@@ -130,7 +130,7 @@
 								9折回饋好朋友</p>
 					   		</div>
 				   			<p class="plan_order">
-				   				<a href="order.html">開始預訂</a>
+				   				<a href="login.html">開始預訂</a>
 					   		</p>
 					   	</div>
 			   		</li>
