--- a/CRM/media-ad-contract_print.html
+++ b/CRM/media-ad-contract_print.html
@@ -105,8 +105,31 @@
                 </font>
               </td>
             </tr>
-
             <tr>
+              <td width="18%" style=" padding:3px 0 3px 10px; border-bottom: 1px solid #dbdbdb;">
+                <font style="font-size:12px; color: #333; font-weight: bold; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
+                  產品/產業
+                </font>
+              </td>
+              <td align="left" colspan="5" style=" padding:3px 10px 3px 3px; border-bottom: 1px solid #dbdbdb;">
+                <font style="font-size:12px; color: #333; font-weight: initial; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
+                  Industrial Goods & Manufacturing工業產品及製造
+                </font>
+              </td>
+            </tr>
+            <tr>
+              <td width="18%" style=" padding:3px 0 3px 10px;">
+                <font style="font-size:12px; color: #333; font-weight: bold; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
+                  連結網址
+                </font>
+              </td>
+              <td align="left" colspan="5" style="padding:3px 10px 3px 3px;">
+                <font style="font-size:12px; color: #333; font-weight: normal; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
+                  https://www.bosswellair.com/tw/drwell/5/79
+                </font>
+              </td>
+            </tr>
+            <!-- <tr>
               <th align="left" style=" padding:3px 10px;">
                 <font
                   style="font-size:12px; color: #333; font-weight: initial; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
@@ -125,7 +148,7 @@
                   連結網址：xxxxx@XXXXXXXX.com.tw
                 </font>
               </td>
-            </tr>
+            </tr> -->
             <tr>
               <td colspan="6" style="border-top: 1px solid #dbdbdb; background-color: #f6f6f6;">
                 <table width="100%" border="0" cellspacing="0" cellpadding="0"
