--- a/CRM/project-order-contract_print.html
+++ b/CRM/project-order-contract_print.html
@@ -90,23 +90,47 @@
             <tr>
               <td width="18%" style=" padding:3px 0 3px 10px; border-bottom: 1px solid #dbdbdb;">
                 <font
-                  style="font-size:12px; color: #555; display: block; font-weight: bold; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
+                  style="font-size:12px; color: #333; display: block; font-weight: bold; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
                   新單
                 </font>
               </td>
               <th align="left" width="16%" style=" padding:3px; border-bottom: 1px solid #dbdbdb;">
                 <font
-                  style="font-size:12px; color: #555; display: block; font-weight: initial; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
+                  style="font-size:12px; color: #333; display: block; font-weight: initial; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
                   廣告刊登期間
                 </font>
               </th>
               <td colspan="4" style=" padding:3px 10px; border-bottom: 1px solid #dbdbdb;">
-                <font style="font-size:12px; color: #555; display: block; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
+                <font style="font-size:12px; color: #333; display: block; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
                   自中華民國 XXX 年 XX 月 XX 日至 XXX 年 XX 月 XX 日止
                 </font>
               </td>
             </tr>
             <tr>
+              <td width="18%" style=" padding:3px 0 3px 10px; border-bottom: 1px solid #dbdbdb;">
+                <font style="font-size:12px; color: #333; font-weight: bold; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
+                  產品/產業
+                </font>
+              </td>
+              <td align="left" colspan="5" style=" padding:3px 10px 3px 3px; border-bottom: 1px solid #dbdbdb;">
+                <font style="font-size:12px; color: #333; font-weight: initial; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
+                  Industrial Goods & Manufacturing工業產品及製造
+                </font>
+              </td>
+            </tr>
+            <tr>
+              <td width="18%" style=" padding:3px 0 3px 10px;">
+                <font style="font-size:12px; color: #333; font-weight: bold; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
+                  連結網址
+                </font>
+              </td>
+              <td align="left" colspan="5" style="padding:3px 10px 3px 3px;">
+                <font style="font-size:12px; color: #333; font-weight: normal; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
+                  https://www.bosswellair.com/tw/drwell/5/79
+                </font>
+              </td>
+            </tr>
+            <!-- <tr>
               <th align="left" style=" padding:3px 0 3px 10px;">
                 <font
                   style="font-size:12px; color: #333; font-weight: initial; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
@@ -125,44 +149,44 @@
                   連結網址：xxxxx@XXXXXXXX.com.tw
                 </font>
               </td>
-            </tr>
+            </tr> -->
           </table>
           <table width="100%" border="0" cellspacing="0" cellpadding="0"
             style="background-color: #fff; border: 1px solid #dbdbdb;">
             <tr>
               <th width="18%" align="left" style=" padding:3px 0 3px 10px; border-bottom: 1px solid #dbdbdb;">
                 <font
-                  style="font-size:12px; color: #555; display: block; font-weight: bold; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
+                  style="font-size:12px; color: #333; display: block; font-weight: bold; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
                   執行版位/格式
                 </font>
               </th>
               <th width="" align="left" style="padding:3px; border-bottom: 1px solid #dbdbdb;">
                 <font
-                  style="font-size:12px; color: #555; display: block; font-weight: bold; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
+                  style="font-size:12px; color: #333; display: block; font-weight: bold; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
                   內容說明
                 </font>
               </th>
               <th width="15%" align="right" style="padding:5px; border-bottom: 1px solid #dbdbdb;">
                 <font
-                  style="font-size:12px; color: #555; display: block; font-weight: bold; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
+                  style="font-size:12px; color: #333; display: block; font-weight: bold; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
                   執行單價
                 </font>
               </th>
               <th width="8%" align="right" style="padding:5px; border-bottom: 1px solid #dbdbdb;">
                 <font
-                  style="font-size:12px; color: #555; display: block; font-weight: bold; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
+                  style="font-size:12px; color: #333; display: block; font-weight: bold; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
                   數量
                 </font>
               </th>
               <th width="8%" align="right" style="padding:5px; border-bottom: 1px solid #dbdbdb;">
                 <font
-                  style="font-size:12px; color: #555; display: block; font-weight: bold; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
+                  style="font-size:12px; color: #333; display: block; font-weight: bold; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
                   單位
                 </font>
               </th>
               <th width="12%" align="right" style="padding:3px 10px 3px 0; border-bottom: 3px solid #f6f6f6;">
                 <font
-                  style="font-size:12px; color: #555; display: block; font-weight: bold; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
+                  style="font-size:12px; color: #333; display: block; font-weight: bold; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
                   小計
                 </font>
               </th>
